# deploy-lab

./: .dockerignore  .env.example  .gitignore  APPLICATION.md  DEPLOY.md  DOCKER.md  Dockerfile  Dockerfile.certbot  Dockerfile.nginx  README.md  SERVER.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  main.py  pyproject.toml
.github/workflows/: build-and-deploy.yaml  ci.yaml  deploy.yaml
nginx/templates/dev/: app.conf  app.conf.template
nginx/templates/prod/: app.conf.template  challenge.conf.template
scripts/: app-entrypoint.sh  certbot-entrypoint.sh  cleanup.sh  deploy.sh  entrypoint.sh  log.sh  nginx-entrypoint.sh  setup.sh
src/: conftest.py  manage.py
src/core/: health.py  settings.py  tests.py  urls.py
src/tasks/: models.py  serializers.py  tests.py  urls.py  views.py
src/tasks/migrations/: 0001_initial.py
systemd/: deploy-lab.service
